--- a/_posts/0000-01-02-aleco234.md
+++ b/_posts/0000-01-02-aleco234.md
@@ -2,5 +2,5 @@
 layout: slide
 title:"Welcome to our second slide"
 --
-Hey buddy I'm writting 
+Hey buddy I'm writting in this file
 Use the left arrow to go back
